# pkdb_analysis

./: .env.local  .gitignore  .travis.yml  01-Data_Prep.ipynb  01_data_preperation.ipynb  Create_Circos.ipynb  MANIFEST.in  README.md  README.rst  RELEASE.md  Statistics.ipynb  analysis.py  circos_plots.ipynb  circos_utils.py  create_circos.sh  fcode.sh  requirements.txt  setup.cfg  setup.py  statistics.ipynb  substance analysis.ipynb  test.ipynb  tox.ini  utils.py
.github/: CONTRIBUTING.rst
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-question.md  03-feature-request.md
.github/workflows/: main.yml
caffeine/: 02-Caffeine_Data_Infer.ipynb  03-Cafffeine_Analysis.ipynb  Codeine_Timecourse.ipynb  codeine.csv  codeine.ods
circos/study/data/: individual_number.txt
circos/study_caffeine/data/: all_subjects_number.txt  (+9 more)
codeine/: 02-Codeine_Data_Infer.ipynb  03-Codeine_Analysis.ipynb  03-Codeine_Data_Analysis.ipynb  Codeine_Timecourse.ipynb  Codeine_Timecourse_Manuscript.ipynb  codeine.csv  codeine.ods  pharmacokinetic.py  pharmacokinetics_01.py  test_calculate_pk.ipynb
data/1-preprocessed/: groups.tsv  individuals.tsv  interventions.tsv  outputs.tsv  studies.tsv  substances.tsv  timecourses.tsv
data/2-merged/: all_complete.tsv  all_results.tsv  all_subjects.tsv  groups_complete.tsv  individuals_complete.tsv
data/3-inferred/: 1-hydroxymidazolam_auc_inf.tsv  1-hydroxymidazolam_clearance.tsv  1-hydroxymidazolam_tmax.tsv  caffeine_auc_end.tsv  caffeine_auc_inf.tsv  caffeine_clearance.tsv  caffeine_kel.tsv  caffeine_thalf.tsv  caffeine_timecourse.tsv  caffeine_tmax.tsv  caffeine_vd.tsv  codeine-6-glucuronide_clearance.tsv  codeine_auc_end.tsv  codeine_auc_inf.tsv  codeine_clearance.tsv  codeine_kel.tsv  codeine_thalf.tsv  codeine_timecourse.tsv  codeine_tmax.tsv  codeine_vd.tsv  midazolam_kel.tsv  midazolam_thalf.tsv  midazolam_tmax.tsv  morphine-3-glucuronide_auc_end.tsv  morphine-6-glucuronide_auc_end.tsv  morphine-6-glucuronide_kel.tsv  morphine-6-glucuronide_timecourse.tsv  morphine_auc_end.tsv  morphine_clearance.tsv  morphine_tmax.tsv  norcodeine_tmax.tsv  norcodeine_vd.tsv  normorphine_auc_end.tsv  normorphine_auc_inf.tsv  normorphine_kel.tsv  normorphine_timecourse.tsv  normorphine_tmax.tsv  paracetamol cysteine_auc_end.tsv  paracetamol cysteine_auc_inf.tsv  paracetamol cysteine_clearance.tsv  (+43 more)
deprecated/: Create_Circos.ipynb
docs/: README.md  api.rst  conf.py  index.rst  requirements-docs.txt
docs/notebooks/: curation.ipynb  curation.rst  data_examples.ipynb  data_examples.rst  filter_examples.ipynb  filter_examples.rst  filter_examples_1.ipynb  query_examples.ipynb
docs_builder/: README.md  conf.py  requirements-docs.txt
docs_builder/notebooks/: curation.ipynb  data_examples.ipynb  data_examples.rst  filter_examples.ipynb  filter_examples_1.ipynb  filter_examples_1.rst  query_examples.ipynb  query_examples.rst
midazolam/: 02_midazolam_data_inference.ipynb  03_midazolam_analysis.ipynb
notebooks/: analysis_example.ipynb  curation.ipynb  data_examples.ipynb  data_examples_local_filtering.ipynb  filter_examples.ipynb  init_datatable_mode.py  query_examples.ipynb
notebooks/deprecated/: 01_data_preperation.ipynb
paracetamol/: 02-Paracetamol_Data_Infer.ipynb  02_apap_inference.ipynb  03-Paracetamol_Analysis.ipynb
pkdb_analysis/: __init__.py  _version.py  analysis.py  data.py  envs.py  filter.py  interactive_plot.py  meta_analysis.py  pkfilter.py  plotting.py  query.py  timecourse.py  utils_caffeine.py  weight_inference.py
pkdb_analysis/deprecated/: analysis.py  oven.py  utils.py
pkdb_analysis/inference/: body_weight.py
pkdb_analysis/interactive/: create.py
pkdb_analysis/pk/: pharmacokinetics.py  pharmacokinetics_example.py  reporting.py
pkdb_analysis/reports/: __init__.py  tables.py
pkdb_analysis/summary/: summary.py
pkdb_analysis/tests/: __init__.py  constants.py  create_data.py  oldtest_query.py  test_data.py  test_filter.py  test_inference_bw.py  test_interactive_plot.py  test_pk.py  test_pkdata.py  test_pkfilter.py  test_query.py
pkdb_manuscript/: Untitled.ipynb  analysis.py  analysis_n.py  caffeine_analysis_manuscript.ipynb  figure_1.xcf  manuscript.py
release-notes/: 0.1.5.md  0.1.6.md  0.1.7.md  0.2.0.md  0.2.1.md  0.2.2.md  next-release.md
results/caffeine/: 02-Caffeine_Data_Infer.ipynb  02-Paraxanthine_Data_Infer.ipynb  02-Theophylline_Data_Infer.ipynb  03-Theophylline_Analysis.ipynb  04-Caffeine_Timecourses.ipynb
results/caffeine_meta/: caffeine_meta.xlsx
results/codeine/: Untitled.ipynb  codeine.csv  codeine.ods  pharmacokinetic.py
results/codeine_timecourse/: codeine_timecourse.xlsx
results/midazolam/: 03_midazolam_analysis.ipynb
results/paracetamol/: 02_apap_inference.ipynb
results/pkdb_manuscript/: analysis.py  analysis_n.py  caffeine_analysis_manuscript.ipynb  file.pgf  manuscript.py  utils.py
src/pkdb_analysis/: __init__.py  analysis.py  circos.py  core.py  data.py  dtypes.py  envs.py  filter.py  kernels.py  logging_utils.py  meta_analysis.py  plotting.py  query.py  units.py  utils.py  utils_caffeine.py
(+441 files in other folders)
