[bumpversion]
current_version = 0.1.4
commit = True
tag = True
parse = (?P<major>\d+)
	\.(?P<minor>\d+)
	\.(?P<patch>\d+)
	(?P<release>[a]*)(?P<num>\d*)
serialize =
	{major}.{minor}.{patch}{release}{num}
	{major}.{minor}.{patch}
tag_name = {new_version}

[metadata]
name = pkdb-analysis
url = https://github.com/matthiaskoenig/pkdb_analysis
download_url = https://pypi.org/project/pkdb-analysis
project_urls =
	Source Code = https://github.com/matthiaskoenig/pkdb_analysis
	Documentation = https://github.com/matthiaskoenig/pkdb_analysis
	Bug Tracker = https://github.com/matthiaskoenig/pkdb_analysis/issues
author = Jan Grzegorzewski & Matthias Koenig
author_email = konigmatt@googlemail.com
maintainer = Matthias Koenig
maintainer_email = konigmatt@googlemail.com
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Bio-Informatics
license = LGPLv3
description = pkdb-analysis are utilities to work with PKDB.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
	standardization
    pharmacokinetics

[options]
zip_safe = True
python_requires = >=3.7
install_requires =
	requests>=2.23.0
	numpy>=1.19.2
	pandas>=1.0.5
	tables>=3.6.1

	pint>=0.16.1
	pyyaml>=5.3.1

	seaborn>=0.10.1
	matplotlib>3.3.0
	altair>=4.1.0
	selenium>=3.141.0
	coloredlogs>=10.0
	scikit-learn>=0.23.1
	openpyxl
	gspread-pandas>=2.2.3

	Ipython
tests_require =
	tox
packages = find:
package_dir =
	= src

[options.packages.find]
where = src

[options.package_data]
cobra =
	resources/*
	test/data/*

[options.extras_require]
development =
	black
	bumpversion
	isort
	tox
    pytest>=6.1
	pytest-cov>=2.8.1

[bdist_wheel]
universal = 1

[bumpversion:part:release]
optional_value = placeholder
first_value = placeholder
values =
	placeholder
	a

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:src/cobra/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
