[bumpversion]
current_version = 0.2.0
commit = True
tag = True
parse = (?P<major>\d+)
	\.(?P<minor>\d+)
	\.(?P<patch>\d+)
	(?P<release>[a]*)(?P<num>\d*)
serialize =
	{major}.{minor}.{patch}{release}{num}
	{major}.{minor}.{patch}
tag_name = {new_version}

[metadata]
name = pkdb-analysis
url = https://github.com/matthiaskoenig/pkdb_analysis
download_url = https://pypi.org/project/pkdb-analysis
project_urls =
	Source Code = https://github.com/matthiaskoenig/pkdb_analysis
	Documentation = https://github.com/matthiaskoenig/pkdb_analysis
	Bug Tracker = https://github.com/matthiaskoenig/pkdb_analysis/issues
author = Jan Grzegorzewski & Matthias Koenig
author_email = konigmatt@googlemail.com
maintainer = Matthias Koenig
maintainer_email = konigmatt@googlemail.com
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Bio-Informatics
license = LGPLv3
description = pkdb-analysis are utilities to work with PKDB.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
	standardization
	pharmacokinetics

[options]
zip_safe = True
python_requires = >=3.8
install_requires =
	requests>=2.24.0
	numpy>=1.21
	depinfo>=0.1.7
    pint>=0.17
	pandas>=1.3

	tables>=3.6.1
	coloredlogs>=14.0

	openpyxl>=3.0.5
	XlsxWriter>=1.3.7
	pyyaml>=5.3.1

    gspread-pandas>=2.2.3

	matplotlib>=3.4

	altair>=4.1.0
    seaborn>=0.11.1
	scikit-learn>=0.24.2
	Ipython>=7.18.1

tests_require =
	tox>=3.21.4
	pytest>=6.2.2
packages = find:
package_dir =
	= src
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
pkdb-analysis =
	resources/*
	test/data/*

[options.extras_require]
development =
	pip-tools
	black>=21.7b0
	bump2version>=1.0.1
	isort>=5.9.3
	tox>=3.24.3
	pytest>=6.2.2
docs =
	sphinx>=3.4.3
	ipykernel>=5.4.3
	nbsphinx>=0.8.1
	sphinx_rtd_theme>=0.5.1
	pypandoc>=1.5
	sphinx-autoapi>=1.7.0

[bdist_wheel]
universal = 1

[bumpversion:part:release]
optional_value = placeholder
first_value = placeholder
values =
	placeholder
	a

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:src/pkdb_analysis/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
